--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <p class="event waiting">Requesting Registration ID</p>
             <p class="event received">Registered</p>
         </div>
+        
+                  <h3>Push Notification Example</h3>
+                  <p>Your GCM ID :  <span id="gcm_id"></span></p>
+                  <p>OK push :  <span id="okpush"></span></p>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
