--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <title>Hello World</title>
 </head>
 
@@ -53,10 +54,22 @@
                   <h3>Push Notification Example</h3>
                   <p>Your GCM ID :  <span id="gcm_id"></span></p>
                   <p>OK push :  <span id="okpush"></span></p>
+                  
+                  <p>1: <span id="etape1"></span></p>
+                  <p>2: <span id="etape2"></span></p>
+                  <p>3: <span id="etape3"></span></p>
+                  <p>4: <span id="etape4"></span></p>
+                  <p>5: <span id="etape5"></span></p>
+                  <p>6: <span id="etape6"></span></p>
+                  <p>7: <span id="etape7"></span></p>
+                  <p>8: <span id="etape8"></span></p>
+                  <p>9: <span id="etape9"></span></p>
+                  <p>10: <span id="etape10"></span></p>
+                  <p>11: <span id="etape11"></span></p>
+                  
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
