--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <script type='text/javascript' src="https://code.jquery.com/jquery-1.10.2.js"></script> 
     <title>Hello World</title>
 </head>
 
@@ -61,6 +60,7 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type='text/javascript' src="js/jquery-1.11.1.js"></script> 
     <script type="text/javascript">
         app.initialize();
     </script>
