--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </script>
     <script>
             
-            $( "#log").append('<p>script inline</p>');
+            $( "#log").append('<br>JQuery script inline ok');
             
       </script>
 </body>
